--- a/complexSystemViewer/viewer/static/css/index.css
+++ b/complexSystemViewer/viewer/static/css/index.css
@@ -1,3 +1,8 @@
-body{
-    background-color: blueviolet;
+@font-face {
+  font-family: 'Inria';
+  src: URL('InriaSans-Regular.ttf') format('truetype');
+}
+
+:root {
+    font-family: Inria;
 }
