added random state update through socket messages

--- a/complexSystemViewer/viewer/templates/canvas.html
+++ b/complexSystemViewer/viewer/templates/canvas.html
@@ -1,3 +1,7 @@
 {% load static %}
 <canvas id="c" width= "640" height="480"></canvas>
+
+<input id="button" type="button" value="Start">
+
+
 <script src="{% static 'js/index.js' %}" type="module"></script>
