config model db

--- a/complexSystemViewer/viewer/templates/configurationPanel.html
+++ b/complexSystemViewer/viewer/templates/configurationPanel.html
@@ -1,7 +1,7 @@
 <div id="configurationPanel">
     <!-- TODO : Rendre la génération des différents param dynamique en fonction d'une liste passé en param
     {% for configurationItem in configurationItemList %}
-        {% include "configurationItem.html with config=configurationItem %}
+        {% include "configurationItems/configurationItem.html" with config=configurationItem %}
     {% endfor %}
     -->
 
