--- a/complexSystemViewer/viewer/templates/configurationItems/parameterItems/intRangeParameter.html
+++ b/complexSystemViewer/viewer/templates/configurationItems/parameterItems/intRangeParameter.html
@@ -1,10 +1,14 @@
-{% extends "baseParameter.html" %}
+{% extends "configurationItems/parameterItems/baseParameter.html" %}
 
 {% load static %}
 
 {% block valueControl %}
-    <h4>Min</h4>
-    <input type="number" id="{{param.name}}Min" name="{{param.name}}Min" step="1" value="{{param.minDefaultValue}}" />
-    <h4>Max</h4>
-    <input type="number" id="{{param.name}}Max" name="{{param.name}}Max" step="1" value="{{param.maxDefaultValue}}" />
+    <div>
+        <h4>min</h4>
+        <input type="number" id="{{param.name}}Min" name="{{param.name}}Min" step="1" value="{{param.minDefaultValue}}" />
+    </div>
+    <div>
+        <h4>max</h4>
+        <input type="number" id="{{param.name}}Max" name="{{param.name}}Max" step="1" value="{{param.maxDefaultValue}}" />
+    </div>
 {% endblock valueControl %}
