--- a/complexSystemViewer/viewer/templates/configurationItems/configurationItem.html
+++ b/complexSystemViewer/viewer/templates/configurationItems/configurationItem.html
@@ -1,14 +1,13 @@
 {% load static %}
 
 <div class="configurationItem" id="{{config.id}}">
-    <!-- TODO : Itération sur la liste des paramétres de l'élément de configuration-->
-    <h2>{{ config.title }}</h2>
-    <!-- TODO : Ajouter une boucle for sur l'ensemble des paramètres avec un "switch" sur le type. Le type du paramètre détermine quel template appelé avec la balise ci dessous
-        {% for param in config.parameters %}
-            {% if param.type == "intRange" %}
-                {% include intRangeParameter.html with param=param %}
-            {% endif %}
-            ...
-        {% endfor %}
-    -->
+    <h2>{{ config.name }}</h2>
+        <div class="parametersList">
+            {% for param in paramConfig %}
+                <h3>{{param.name}}</h3>
+                {% if param.type == "IR" %}
+                    {% include "configurationItems/parameterItems/intRangeParameter.html" with param=param %}
+                {% endif %}
+            {% endfor %}
+        </div>
 </div>
