--- a/complexSystemViewer/viewer/templates/configurationItems/parameterItems/baseParameter.html
+++ b/complexSystemViewer/viewer/templates/configurationItems/parameterItems/baseParameter.html
@@ -1,4 +1,6 @@
 {% load static %}
+
+<h3>{{param.name}}</h3>
 <div class="parameterItem {{param.type}}">
     {% block valueControl %}{% endblock valueControl %}
 </div>
