added FPS viewer

--- a/complexSystemViewer/viewer/templates/canvas.html
+++ b/complexSystemViewer/viewer/templates/canvas.html
@@ -2,6 +2,18 @@
 <input id="button" type="button" value="Start">
 <canvas id="c" width= "640" height="480"></canvas>
 
+<div id="stats">
+    <div id="renderingFps">
+        FPS : NaN
+    </div>
+    <div id="renderingMs">
+        Rendering : NaN
+    </div>
+    <div id="updateMs">
+        Update : Nan
+    </div>
+</div>
+
 
 
 <script src="{% static 'js/index.js' %}" type="module"></script>
