--- a/complexSystemViewer/viewer/templates/configurationPanel.html
+++ b/complexSystemViewer/viewer/templates/configurationPanel.html
@@ -1,10 +1,10 @@
-{% regroup parameters by configuration as param_list %}
-
 <div id="configurationPanel">
     <select name="model" id="modelSelector">
-        <option value="GOL">Jeu de la vie</option>
+        {% for model in models %}
+        <option value="{{model.id}}">{{model.name}}</option>
+        {% endfor %}
     </select>
-    {% for configurationTuple in param_list %}
-        {% include "configurationItems/configurationItem.html" with config=configurationTuple.grouper paramConfig=configurationTuple.list %}
+    {% for config, parameters in configurations.items %}
+        {% include "configurationItems/configurationItem.html"%}
     {% endfor %}
 </div>
