--- a/complexSystemViewer/viewer/static/css/index.css
+++ b/complexSystemViewer/viewer/static/css/index.css
@@ -1,10 +1,15 @@
 @font-face {
-  font-family: 'Inria';
-  src: URL('InriaSans-Regular.ttf') format('truetype');
+  font-family: 'Inria-Regular';
+  src: url('InriaSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inria-Light';
+  src: url('InriaSans-Light.ttf') format('truetype');
 }
 
 :root {
-    font-family: Inria;
+    font-family: Inria-Regular;
     --color-dark: #062d38;
     --color-midDark: #0a3b49;
     --color-light: #bcccd1;
