--- a/complexSystemViewer/viewer/templates/toolbar.html
+++ b/complexSystemViewer/viewer/templates/toolbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div id="toolbar">
-    <div id="toolCamera"></div>
-    <div id="toolAdd"></div>
-    <div id="toolDelete"></div>
+    {% for tool in toolsList %}
+        {% include "toolBarItems/baseTool.html" %}
+    {% endfor %}
 </div>
