--- a/complexSystemViewer/viewer/static/css/index.css
+++ b/complexSystemViewer/viewer/static/css/index.css
@@ -15,6 +15,8 @@
     --color-light: #bcccd1;
     --color-lighter: #f3f6f8;
     --color-action: #ff9d2d;
+
+    --toolBar-width: 45px;
 }
 
 body {
