--- a/complexSystemViewer/viewer/templates/configurationItems/parameterItems/rangeParameter.html
+++ b/complexSystemViewer/viewer/templates/configurationItems/parameterItems/rangeParameter.html
@@ -5,10 +5,10 @@
 {% block valueControl %}
     <div>
         <h4>min</h4>
-        <input type="number" id="{{param.id}}min" name="{{param.name}}Min" step="{{param.step}}" value="{{param.minDefaultValue}}" />
+        <input type="number" id="{{param.idHtml}}Min" name="{{param.name}}Min" step="{{param.step}}" value="{{param.minDefaultValue}}" />
     </div>
     <div>
         <h4>max</h4>
-        <input type="number" id="{{param.id}}max" name="{{param.name}}Max" step="{{param.step}}" value="{{param.maxDefaultValue}}" />
+        <input type="number" id="{{param.idHtml}}Max" name="{{param.name}}Max" step="{{param.step}}" value="{{param.maxDefaultValue}}" />
     </div>
 {% endblock valueControl %}
