--- a/complexSystemViewer/viewer/templates/configurationItems/parameterItems/colorParameter.html
+++ b/complexSystemViewer/viewer/templates/configurationItems/parameterItems/colorParameter.html
@@ -4,6 +4,6 @@
 
 {% block valueControl %}
 
-<input type="color" id="{{param.id}}" name="{{param.name}}" value="{{param.hexDefaultValue}}" />
+<input type="color" id="{{param.idHtml}}" name="{{param.name}}" value="{{param.hexDefaultValue}}" />
 
 {% endblock valueControl %}
