--- a/complexSystemViewer/viewer/templates/header.html
+++ b/complexSystemViewer/viewer/templates/header.html
@@ -23,5 +23,9 @@
                 <path d="M12 12L16 10" stroke="#33363F" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
         </button>
+        <div id="animationTimer">
+            <input type="range" id="inputTimer" name="timer" min="0" max="11"/>
+            <label id="labelTimer" for="timer">timer</label>
+        </div>
     </div>
 </header>
