--- a/complexSystemViewer/viewer/templates/canvas.html
+++ b/complexSystemViewer/viewer/templates/canvas.html
@@ -5,8 +5,14 @@
     <div id="renderingFps">
         FPS : NaN
     </div>
+    <div id="totalMs">
+        Total : Nan
+    </div>
     <div id="renderingMs">
         Rendering : NaN
+    </div>
+    <div id="pickingMs">
+        Picking : Nan
     </div>
     <div id="updateMs">
         Update : Nan
