--- a/complexSystemViewer/viewer/static/css/configurationPanel.css
+++ b/complexSystemViewer/viewer/static/css/configurationPanel.css
@@ -109,7 +109,7 @@ h3, h4 {
     height: 27px;
 }
 
-.visualizationInput .visuParam {
+.visualizationInput .transformerParam {
     display: flex;
     flex-direction: column;
 }
