--- a/complexSystemViewer/viewer/templates/transformers/transformerItem.html
+++ b/complexSystemViewer/viewer/templates/transformers/transformerItem.html
@@ -1,12 +1,12 @@
-<div class="configurationItem" id="{{transformer.idHtml}}">
+<div class="configurationItem" id="{{transformer.idHtml}}" transformer="{{transformer.transformerType}}">
     <h2>{{transformer.name}}</h2>
     <div class="visualizationInput">
     <select>
         {% for sysOutput in model.getSimOutType %}
-            <option value="{{sysOutput}}">{{sysOutput}}</option>
+            <option value="{{sysOutput}}" {% if transformer.outputType == sysOutput %} selected {% endif %}>{{sysOutput}}</option>
         {% endfor %}
     </select>
-    <div class="visuParam">
+    <div class="transformerParam">
         {% for param in parameters %}
             {% include "parameters/miniParameterSwitch.html" %}
         {% endfor %}
