--- a/complexSystemViewer/viewer/static/css/index.css
+++ b/complexSystemViewer/viewer/static/css/index.css
@@ -34,6 +34,10 @@ div#simulator {
   overflow: hidden;
 }
 
+button {
+  cursor: pointer;
+}
+
 .transformerItem {
   display: flex;
   justify-content: space-evenly;
