--- a/complexSystemViewer/viewer/templates/index.html
+++ b/complexSystemViewer/viewer/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/toolbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/canvas.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/configurationPanel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animationItem.css' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "css/favicon-16x16.png" %}">
 </head>
 
