--- a/complexSystemViewer/viewer/templates/parameters/parameterItems/rangeParameter.html
+++ b/complexSystemViewer/viewer/templates/parameters/parameterItems/rangeParameter.html
@@ -5,10 +5,12 @@
 {% block valueControl %}
     <div>
         <h4>min</h4>
-        <input type="number" paramId="{{param.paramId}}Min" name="{{param.name}}Min" step="{{param.step}}" value="{{param.minDefaultValue}}" />
+        <input type="number" paramId="{{param.paramId}}Min" name="{{param.name}}Min" step="{{param.minStep}}" 
+        value="{{param.minDefaultValue}}" min="{{param.minMinimumValue}}" max="{{param.minMaximumValue}}"/>
     </div>
     <div>
         <h4>max</h4>
-        <input type="number" paramId="{{param.paramId}}Max" name="{{param.name}}Max" step="{{param.step}}" value="{{param.maxDefaultValue}}" />
+        <input type="number" paramId="{{param.paramId}}Max" name="{{param.name}}Max" step="{{param.maxStep}}"
+        value="{{param.maxDefaultValue}}" min="{{param.maxMinimumValue}}" max="{{param.maxMaximumValue}}"/>
     </div>
 {% endblock valueControl %}
