--- a/complexSystemViewer/viewer/templates/header.html
+++ b/complexSystemViewer/viewer/templates/header.html
@@ -25,7 +25,7 @@
         </button>
         <div id="animationTimer">
             <input type="range" id="inputTimer" name="timer" min="0" max="11"/>
-            <label id="labelTimer" for="timer">timer</label>
+            <label id="labelTimer" for="inputTimer">timer</label>
         </div>
     </div>
 </header>
