--- a/complexSystemViewer/viewer/templates/rulesItem.html
+++ b/complexSystemViewer/viewer/templates/rulesItem.html
@@ -1,4 +1,4 @@
-<div id="rules" class="configurationItem">
+<div id="rules" class="configurationItem simulationItem">
     <h2>Rules</h2>
     <div class="parametersList">
         {% for param in rulesParameters %}
