--- a/complexSystemViewer/viewer/static/css/canvas.css
+++ b/complexSystemViewer/viewer/static/css/canvas.css
@@ -1,48 +1,3 @@
 #c {
-    width: calc(100% - var(--toolBar-width));
-}
-
-div #stats {
-    position: fixed;
-    top: 75px;
-    left: 120px;
-    opacity:0.9;
-    z-index:10000;
-    display: flex;
-    flex-direction: row;
-}
-
-div #renderingMs {
-    width: 140px;
-    margin: 5px;
-    padding: 5px;
-    background-color: #e5cba0;
-}
-
-div #updateMs {
-    width: 140px;
-    margin: 5px;
-    padding: 5px;
-    background-color: burlywood;
-}
-
-div #renderingFps {
-    width: 60px;
-    margin: 5px;
-    padding: 5px;
-    background-color: #ebeb99;
-}
-
-div #pickingMs {
-    width: 140px;
-    margin: 5px;
-    padding: 5px;
-    background-color: #a7ccf9;
-}
-
-div #totalMs {
-    width: 140px;
-    margin: 5px;
-    padding: 5px;
-    background-color: #a7ccf9;
+    width: 100%;
 }
