--- a/complexSystemViewer/viewer/templates/index.html
+++ b/complexSystemViewer/viewer/templates/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/header.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/toolbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/canvas.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/configurationPanel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/configurationPanels.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/visualizationPanel.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/simulationPanel.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animationItem.css' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "css/favicon-16x16.png" %}">
 </head>
@@ -18,8 +19,8 @@
     {% include "header.html" %}
 
     <div id="simulator">
-        {% include "toolbar.html" %}
+        {% include "simulationPanel.html" %}
         {% include "canvas.html" %}
-        {% include "configurationPanel.html"%}
+        {% include "visualizationPanel.html"%}
     </div>
 </body>
